# eval-bench

./: .gitignore  AGENT.md  README.md  pyproject.toml
cases/: README.md
cases/chandao_delivery/: README.md  suite.yaml
cases/chandao_delivery/cases/: project_read_list.yaml  release_read_list.yaml
cases/chandao_product/: README.md  case_create.yaml  case_list_empty.yaml  suite.yaml
cases/chandao_product/cases/: product_read_list.yaml  product_write_create.yaml  product_write_delete_roundtrip.yaml  product_write_update_name.yaml
cases/chandao_test/: README.md  suite.yaml
cases/chandao_test/cases/: testcase_read_list.yaml  testcase_write_create.yaml  testcase_write_delete_roundtrip.yaml  testcase_write_update_title.yaml  testtask_read_list.yaml  testtask_write_create.yaml
cases/chandao_work/: README.md  suite.yaml
cases/chandao_work/cases/: bug_read_list.yaml  bug_write_create.yaml  story_read_list.yaml  story_write_create.yaml
cases/hello_example/: case_greet_ada.yaml  case_greet_colleague.yaml  suite.yaml
evalbench/: __init__.py  agent.py  case.py  cli.py  config.py  diff.py  grade.py  metrics.py  provenance.py  report.py  runner.py  target.py
skills/hello/: SKILL.md
tests/: test_agent_retry.py  test_case_loader.py  test_diff.py  test_evidence.py  test_example_suite.py  test_grade.py  test_parallel.py  test_provenance.py  test_report.py  test_runner_smoke.py  test_target.py
