[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evalbench"
version = "0.1.0"
description = "An eval bench for Claude agents, built on the Claude Agent SDK."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
evalbench = "evalbench.cli:main"

[tool.setuptools.packages.find]
include = ["evalbench*"]
exclude = ["tests*", "cases*", "runs*", "skills*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
